--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body style="background-color: #F3F3F3;">
+  <body class="bg-img">
+    <div class="overlay"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
