Fix: Adjusted logo file path

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/public/img/UE Logo-01_1.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="/public/img/UE Logo-01_1.png"
+      type="image/x-icon" />
     <title>Course Registration</title>
   </head>
   <body class="bg-img">
